# statusbot

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  RustConfig  app.json  sqlx-data.json
migrations/: 20200811221905_create_tables.sql
postgres/: docker-compose.yml
postgres/migrations/: 20200813125704_create_tables.sql
sql/team/: add_member.sql  delete.sql  delete_member.sql  fetch_all.sql  fetch_by_name.sql  fetch_members.sql  insert.sql  save.sql
sql/user/: fetch_by_id.sql  save.sql
sqlite/migrations/: 20200811221905_create_tables.sql
src/: main.rs
src/handlers/: command.rs  event.rs  register.rs
src/models/: team.rs  user.rs
