[package]
name = "statusbot"
version = "0.1.0"
authors = ["kallison"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
async-std = "1.6.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = { version = "1.0.114", features = ["derive"] }
tide = "0.13.0"
tide-tracing = "0.0.5"
tracing = "0.1.18"
tracing-subscriber = "0.2.10"
serde_json = "1.0.57"
surf = "2.0.0-alpha.4"
lazy_static = "1.4.0"
parking_lot = "0.11.0"
