[package]
name = "statusbot"
version = "0.1.0"
authors = ["kallison"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.6"
async-trait = "0.1"
dotenv = "0.15"
dotenv_codegen = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.4.0-beta.1", features = ["runtime-async-std", "sqlite", "chrono"] }
surf = "2.0.0-alpha.4"
tide = "0.13"
tide-tracing = "0.0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
serde_json = "1.0"
futures = "0.3.5"
